tests/data/motifs/bad/test_pwms_bad4.motifscan
>MA0006.1	Ahr::Arnt	PWM
C [ 0.48657	-5.32257	 1.53966	-5.32257	-5.32257	-5.32257]
